[fix] 스트림 메서드 수정